client-compose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      serviceAccountName: client-sa          # <-- Add this line here
      containers:
      - name: service1
        image: client_mesh:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
