locust-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      serviceAccountName: locust-sa
      containers:
      - name: locust
        image: locustio/locust
        command: ["locust"]
        args: ["-f", "/mnt/locust/locustfile.py", "--host=http://service2:5001", "--web-host=0.0.0.0"]
        ports:
        - containerPort: 8089
        volumeMounts:
        - name: locustfile
          mountPath: /mnt/locust
      volumes:
      - name: locustfile
        configMap:
          name: locustfile-config
---
apiVersion: v1
kind: Service
metadata:
  name: locust
spec:
  selector:
    app: locust
  ports:
  - port: 8089
    targetPort: 8089
