service1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: mesh-demo
  labels:
    app: client
spec:
  selector:
    app: client
    version: v1
  ports:
  - name: http
    port: 8000
    targetPort: 8000
